--- a/queryj-core/pom.xml
+++ b/queryj-core/pom.xml
@@ -160,6 +160,11 @@
       <artifactId>mockito-all</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.powermock</groupId>
+          <artifactId>powermock-api-mockito</artifactId>
+          <version>1.4.12</version>
+      </dependency>
 
   </dependencies>
 
