--- a/pom.xml
+++ b/pom.xml
@@ -505,17 +505,17 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.0-beta-7</version>
+          <version>2.5.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.0-beta-7</version>
+          <version>2.4</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.0-beta-7</version>
+          <version>2.6</version>
         </plugin>
       </plugins>
     </pluginManagement>
