--- a/queryj-templates/pom.xml
+++ b/queryj-templates/pom.xml
@@ -111,7 +111,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <scope>provided</scope>
+      <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
