--- a/queryj-template-packaging-maven-plugin/pom.xml
+++ b/queryj-template-packaging-maven-plugin/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <scope>provided</scope>
+      <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
