--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -118,4 +118,4 @@ ResultSetGetters.validation.not.available=Internal Error: The outcome of the Res
 cannot.validate.empty.query=SQL {0} is empty and has been marked for validation. Either define it or disable the "validate" attribute
 invalid.column.name.in.custom.query=Invalid column name {0} in SQL {1}
 invalid.column.name.in.custom.result=Invalid column name {0} as declared in {2}, for SQL {1}
-CustomSqlProvider.not.available=The required CustomSqlProvider instance is not available
+CustomSqlProvider.not.available=Internal error: The required CustomSqlProvider instance is not available
