--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -121,4 +121,4 @@ invalid.column.name.in.custom.result=Invalid column name {0} as declared in {2},
 CustomSqlProvider.not.available=Internal Error: The required CustomSqlProvider instance is not available
 DecoratorFactory.not.available=Internal Error: The required DecoratorFactory implementation is not available
 PackageName.not.available=Internal Error: The required package name is not available
-BasePackageName.not.available=Internal Error: The required package name is not available
+BasePackageName.not.available=Internal Error: The required base package name is not available
