--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -122,3 +122,4 @@ CustomSqlProvider.not.available=Internal Error: The required CustomSqlProvider i
 DecoratorFactory.not.available=Internal Error: The required DecoratorFactory implementation is not available
 PackageName.not.available=Internal Error: The required package name is not available
 BasePackageName.not.available=Internal Error: The required base package name is not available
+RepositoryName.not.available=Internal Error: The required package name is not available
