--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -123,3 +123,4 @@ DecoratorFactory.not.available=Internal Error: The required DecoratorFactory imp
 PackageName.not.available=Internal Error: The required package name is not available
 BasePackageName.not.available=Internal Error: The required base package name is not available
 RepositoryName.not.available=Internal Error: The required repository name is not available
+JndiLocation.not.available=Internal Error: The required repository name is not available
