--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -124,4 +124,4 @@ PackageName.not.available=Internal Error: The required package name is not avail
 BasePackageName.not.available=Internal Error: The required base package name is not available
 RepositoryName.not.available=Internal Error: The required repository name is not available
 JndiLocation.not.available=Internal Error: The required JNDI location information is not available
-FileName.not.available=Internal Error: The required JNDI location information is not available
+FileName.not.available=Internal Error: The required file name information is not available
