--- a/queryj-core/src/main/resources/queryj-exceptions.properties
+++ b/queryj-core/src/main/resources/queryj-exceptions.properties
@@ -126,4 +126,4 @@ RepositoryName.not.available=Internal Error: The required repository name is not
 JndiLocation.not.available=Internal Error: The required JNDI location information is not available
 FileName.not.available=Internal Error: The required file name information is not available
 TableName.not.available=Internal Error: The required table name information is not available
-StaticValues.not.available=Internal Error: The required table name information is not available
+StaticValues.not.available=Internal Error: The required list of static values for table name information is not available
